[package]
name = "lisper"
license = "MIT"
version = "0.1.0"
authors = ["Shashi Kant <shashitnak42@proton.me"]
edition = "2021"
description = "Lisp interpreter in Rust"
repository = "https://github.com/shashitnak/lisper"
documentation = "https://docs.rs/lisper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
